<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EP9208" Id="{55e06dc4-9c3f-4959-8bac-04e032f67e79}">
    <Declaration><![CDATA[TYPE ST_EP9208 :
STRUCT
	//VICI Valves connected to EP9208-1035
	ECAT_ControlWord      				: UINT;    // Control Word do EtherCAT
    ECAT_TargetPosition   				: LREAL;   // Posição alvo
    ECAT_TargetVelocity   				: LREAL;   // Velocidade alvo
    ECAT_StatusWord       				: UINT;    // Status Word do EtherCAT
    ECAT_ModeOfOperation  				: BYTE;    // Modo de operação
	
	iTargetPosition			AT %I*		: UDINT;
	iTargetVelocity			AT %I*		: UDINT;
	nTargetPosition			AT %Q*		: UDINT; //4
	iStatusWord				AT %I*		: UINT;
	qControlWord			AT %Q*		: WORD; //1
	nTargetVelocity			AT %Q*		: INT; //3
	nActualVelocity			AT %I*	 	: INT;
	nState					AT %I*		: WORD; //2			//Terminal State from IO Terminal Info Data
	sStatus								: STRING(200);
	Axis	                    		: AXIS_REF; 		//TC2_MC2.AXIS_REF;
	n_Axis3TorqueLimitation	AT %Q*		: UINT	:=	32767;
	n_Axis3ActualTorque					: REAL; 			//now part of structured varaible axis_ref
	
	//New Variables
	rAtualPosition						: LREAL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>